badminton-infra/infra/k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: nieuwegein-badminton
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        readinessProbe:
          exec:
            command: ["pg_isready","-U","badminton_user"]
          initialDelaySeconds: 5
          periodSeconds: 5
